--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -2,24 +2,26 @@
 
 .homepage__cta {
   border-top: 4px solid #f5f5f5;
-  border-left: 4px solid #f5f5f5;
   color: #000;
   min-height: 265px;
-  padding: 3.5rem 10rem 2rem;
+  padding: 0 8rem;
+  margin: 0 4rem 0;
   position: relative;
   &:nth-child(odd) {
     padding-right: 0;
+    border-left: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
       padding-right: 10rem;
     }
   }
   &:nth-child(even) {
     padding-left: 0;
+    border-right: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
       padding-left: 10rem;
     }
   }
-  
+
   /** Hide top/bottom of borders **/
   &:first-child {
     border-top-width: 0;
@@ -27,7 +29,7 @@
       background: #fff;
       content: '';
       left: -4px;
-      height: 8rem;
+      height: 2rem;
       position: absolute;
       top: 0;
       width: 4px;
@@ -39,24 +41,14 @@
       background: #fff;
       bottom: 0;
       content: '';
-      height: 8rem;
+      height: 2rem;
       position: absolute;
       right: -4px;
       width: 4px;
       z-index: 10;
     }
-    &:before {
-      background: #fff;
-      bottom: 0;
-      content: '';
-      left: -4px;
-      height: 8rem;
-      position: absolute;
-      width: 4px;
-      z-index: 10;
-    }
   }
-  
+
   .homepage__cta__badge {
     background-color: #00aeef;
     background-position: center center;
@@ -64,20 +56,31 @@
     background-size: 140px;
     border: 4px solid #f5f5f5;
     border-radius: 97px;
-    left: -10%;
+    margin-top: 2rem;
     height: 194px;
-    position: absolute;
-    top: 2.5rem;
     width: 194px;
     z-index: 50;
   }
-  
-  &:nth-child(even) {
-    border-left-width: 0;
-    border-right: 4px solid #f5f5f5;
+
+  &:nth-child(odd) {
+    border-right: none;
     .homepage__cta__badge {
-      left: auto;
-      right: -10%;
+      float: left;
+      margin-left: -14.5rem;
+    }
+  }
+  &:nth-child(even) {
+    border-left: none;
+    .homepage__cta__badge {
+      float: right;
+      margin-right: -14.5rem;
+    }
+  }
+
+  /* Color the badges */
+  &:nth-child(1) {
+    .homepage__cta__badge {
+      background-color: #00aeef;
     }
   }
   &:nth-child(2) {
@@ -90,13 +93,18 @@
       background-color: #9d9fa2;
     }
   }
-  
+  &:nth-child(4) {
+    .homepage__cta__badge {
+      background-color: #00aeef;
+    }
+  }
+
   h2 {
     color: #666666;
     font-family: $font-montserrat;
     font-size: 32px;
   }
-  
+
   ul {
     list-style: none;
     margin-bottom: 0;
