--- a/components/30-components/basic/student-profiles/student-profiles.scss
+++ b/components/30-components/basic/student-profiles/student-profiles.scss
@@ -30,7 +30,7 @@
 
     > p {
       font-size: 18px;
-      line-height: 1.3;
+      line-height: 1.3em;
       padding: 0 2rem 0;
       @include breakpoint($bp--mid) {
         padding: 0 4rem 0;
@@ -51,13 +51,14 @@
         vertical-align: top;
         margin-bottom: 5rem;
 
+        a {
+          color: #FFF;
+          text-decoration: underline;
+        }
+
         @include breakpoint($bp--mid) {
           margin: 1% 1% 5rem;
           width: 48%;
-          /* Make all boxes similar in shape */
-          p {
-            height: 7rem;
-          }
         }
         @include breakpoint($bp--large) {
           width: 22%;
