--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -1,20 +1,38 @@
 @import '_global.scss';
 
 .cta__container {
-  margin: 2rem;
+  margin: 0 2rem 3rem;
+  @include breakpoint($bp--xlarge) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .homepage__cta {
   border-top: 4px solid #f5f5f5;
   color: #000;
   min-height: 265px;
-  padding: 0 8rem;
-  margin: 0 4rem 0;
+  padding: 2rem 2.5rem 1rem;
+  margin: 0 2rem 0;
   position: relative;
+  @include breakpoint($bp--mid) {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+  @include breakpoint($bp--xlarge) {
+    margin: 0;
+    min-height: 250px;
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+  
   &:nth-child(odd) {
     padding-right: 0;
     border-left: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
+      padding-right: 2rem;
+    }
+    @include breakpoint($bp--xlarge) {
       padding-right: 10rem;
     }
   }
@@ -22,34 +40,47 @@
     padding-left: 0;
     border-right: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
+      padding-left: 2rem;
+    }
+    @include breakpoint($bp--xlarge) {
       padding-left: 10rem;
     }
   }
 
-  /** Hide top/bottom of borders **/
+  /** Hide top of borders **/
   &:first-child {
     border-top-width: 0;
     &:after {
       background: #fff;
       content: '';
       left: -4px;
-      height: 2rem;
+      height: 3em;
       position: absolute;
       top: 0;
       width: 4px;
       z-index: 10;
     }
   }
+  /** Hide bottom of borders **/
   &:last-child {
+    // Use before and after to handle odd/even
+    &:before,
     &:after {
       background: #fff;
       bottom: 0;
       content: '';
-      height: 2rem;
+      height: 75%;
       position: absolute;
-      right: -4px;
+      left: -4px;
       width: 4px;
       z-index: 10;
+      @include breakpoint($bp--large) {
+        height: 50%;
+      }
+    }
+    &:after {
+      left: auto;
+      right: -4px;
     }
   }
 
@@ -60,7 +91,8 @@
     background-size: 140px;
     border: 4px solid #f5f5f5;
     border-radius: 97px;
-    margin-top: 2rem;
+    margin-top: -.5rem;
+    position: relative;
     height: 194px;
     width: 194px;
     z-index: 50;
@@ -70,14 +102,30 @@
     border-right: none;
     .homepage__cta__badge {
       float: left;
-      margin-left: -14.5rem;
+      margin-left: -7.5rem;
+      margin-right: 1rem;
+      @include breakpoint($bp--mid) {
+        margin-left: -13rem;
+        margin-right: 0;
+      }
+      @include breakpoint($bp--xlarge) {
+        margin-left: -16.25rem;
+      }
     }
   }
   &:nth-child(even) {
     border-left: none;
     .homepage__cta__badge {
       float: right;
-      margin-right: -14.5rem;
+      margin-left: 1rem;
+      margin-right: -7.5rem;
+      @include breakpoint($bp--mid) {
+        margin-left: 0;
+        margin-right: -13rem;
+      }
+      @include breakpoint($bp--xlarge) {
+        margin-right: -16.25rem;
+      }
     }
   }
 
@@ -107,6 +155,7 @@
     color: #666666;
     font-family: $font-montserrat;
     font-size: 32px;
+    margin-top: 0;
   }
 
   ul {
